creating database classes

--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,15 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url  "https://dl.bintray.com/unsplash/unsplash-photopicker-android" }
         
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    roomVersion = '2.2.6'
 }
