--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    buildFeatures {
+        viewBinding true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -32,6 +35,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
+    implementation "com.google.android.material:material:1.4.0-alpha01"
+
     androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.3.0'
