--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext{
         kotlin_version = '1.3.50'
         navigation_version = '2.1.0'
+        nav_version = "2.3.4"
     }
     repositories {
         google()
@@ -14,6 +15,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.1.2'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
