--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
@@ -50,7 +50,9 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:1.0.0-alpha07"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.3"
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.github.bumptech.glide:recyclerview-integration:$rootProject.glideVersion"
+    kapt "com.github.bumptech.glide:compiler:$rootProject.glideVersion"
 
     androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
     testImplementation 'junit:junit:4.12'
