--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,11 @@
 
 buildscript {
     ext{
-        kotlin_version = '1.3.50'
-        navigation_version = '2.1.0'
-        nav_version = "2.3.4"
+        kotlinVersion = '1.3.50'
+        navigationVersion = '2.1.0'
+        navVersion = "2.3.4"
+        roomVersion = '2.2.6'
+        glideVersion = '4.11.0'
     }
     repositories {
         google()
@@ -13,9 +15,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.2'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -32,8 +34,4 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-ext {
-    roomVersion = '2.2.6'
 }
